# gargamel

./: Cargo.toml  LICENSE.txt  README.md  Specification.txt  comms.txt  commsSSH.txt  filesSSH.txt
src/: arg_parser.rs  command_runner.rs  command_utils.rs  edb_acquirer.rs  embedded_search_list.rs  events_acquirer.rs  evidence_acquirer.rs  file_acquirer.rs  interactive_process.rs  kape_handler.rs  large_evidence_acquirer.rs  logo.rs  main.rs  memory_acquirer.rs  path_retriever.rs  path_utils.rs  process_runner.rs  registry_acquirer.rs  remote_computer.rs  standard_tools_evidence_acquirer.rs  svi_data_acquirer.rs  utils.rs  wmi_evidence_acquirer.rs
src/remote/: archiver.rs  connector.rs  constants.rs  copier.rs  download.rs  local.rs  mod.rs  powershell.rs  psexec.rs  psremote.rs  rdp.rs  reverse_share_connector.rs  shadow_copier.rs  ssh.rs  utils.rs  wmi.rs
