[package]
name = "gargamel"
version = "0.1.0"
authors = ["viliam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'  # Optimize for size. Comment it to optimize for speed
lto = true

#[build]
#rustflags = "-C target-cpu=native"

[dependencies]
#tokio = { version = "0.2", features=["full"] }
#futures = "0.3"
log = "0.4"
simplelog = "0.7"
clap = { git = "https://github.com/clap-rs/clap/" }
async-trait = "0.1"
bytes = ""
uuid = { version = "0.8", features = ["v4"] }
dunce = "1.0.0"