[package]
name = "gargamel"
version = "0.1.0"
authors = ["viliam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'  # Optimize for size. Comment it to optimize for speed
lto = true

[dependencies]
log = "0.4"
simplelog = "0.7"
clap = { git = "https://github.com/clap-rs/clap/" }
bytes = ""
uuid = { version = "0.8.2", features = ["v4"] }
dunce = "1.0.0"
wait-timeout = "0.2.0"
rpassword = "4.0.5"
fs_extra = "1.1"
rayon = "1.5"
wildmatch = "2.0.0"
rev_lines = "0.2.1"
gethostname = "^0.2.1"
